feat: instance setup with external IdP
